kubernetes/infrastructure/controllers/tailscale-operator/shared-service-ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-shared-service
  namespace: apps
  annotations:
    tailscale.com/tags: tag:homelab-shared-service
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - example-shared-service
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service
                port:
                  number: 80
